Ajout et suppression des Tafs et Ues